feat(backtest): 添加超额收益Alpha分析功能
- 在BacktestEngine中定义excessReturns序列用于Alpha分析
- 计算超额收益均值、标准差、胜率和最大回撤等指标
- 添加Alpha贡献占比分析功能
- 在BacktestReport实体类中新增超额收益相关字段
- 前端实现ExcessAnalysisPanel组件展示Alpha分析结果
- 优化ClickHouse批量写入异常处理机制
- 调整因子计算引擎只写入ClickHouse取消MySQL双写